--- a/src/index.css
+++ b/src/index.css
@@ -26,15 +26,28 @@ code {
 
 .headerSearch {
   display: flex;
+  margin-top: 40px;
+  flex: 1;
   align-items: center;
-  
+  max-width: fit-content;
+  padding: 10px;
+  height: 30px;
+  border: 1px solid lightgray;
+  border-radius: 99px;
+}
+
+.headerSearch > input {
+  border: none;
+  width: 20vw;
+  padding: 10px;
+  outline-width: 0
 }
 
 .userHolder {
   display: flex;
   align-items: center;
   margin-right: 10px;
-
+  justify-content: space-between;
 }
 
 /* -------------------Home Page Component-----------------------------  */
@@ -97,6 +110,42 @@ code {
 
 /* ------------------CARD LISTINGS ------------------------------ */
 
-.card-listing {
-  
+.card {
+  margin: 10px;
+  border-radius: 10px;
+  box-shadow: 0px 6px 18px -19px rgba(0, 0, 0, 0.75);
+  transition: transform 100ms ease-in;
+  cursor: pointer;
 }
+
+.card:hover {
+  transform: scale(1.02);
+}
+
+.card > img {
+  margin-top: 10px;
+  object-fit: fill;
+  min-width: 300px;
+  min-height: 200px;
+  width: 50%;
+}
+
+.card-info {
+    margin-top: -9px;
+    border-radius: 10px;
+    padding: 20px;
+    padding-top: 20px;
+    border: 1;
+  }
+
+  .card-info > h1 {
+    font-size: 18px;
+    font-weight: 600;
+  }
+  
+  .card-info > p {
+    font-size: 14px;
+    font-weight: 300;
+    margin-top: 8px;
+    margin-bottom: 8px;
+  }
