--- a/src/index.css
+++ b/src/index.css
@@ -75,9 +75,38 @@ code {
   display: flex;
   justify-content: center;
   padding-top: 3%;
-
 }
 
+.filler-home {
+  background: #000000;
+  height: 800px;
+}
+
+.filler-header {
+  font-size: 32px;
+  text-align: start;
+  color: #fff;
+  padding: 2%;
+}
+
+.filler-text {
+  text-align: start;
+  color: #fff;
+  margin-left: 1%;
+}
+
+.filler-mainImg {
+  width: 30%;
+  position: absolute;
+  left: 2%
+}
+
+.filler-1 > p {
+  color: #fff;
+  left: 40px;
+  position: absolute;
+  bottom: -800px
+}
  /* ---------------Category Component ----------------  */
  .card-category {
   align-items: center;
