--- a/src/index.css
+++ b/src/index.css
@@ -130,11 +130,6 @@ code {
   bottom: -800px
 }
  /* ---------------Category Component ----------------  */
- .card-category {
-  align-items: center;
-  display: flex;
-
-}
 
 .render-categroyCard {
   align-items: center;
@@ -146,9 +141,6 @@ code {
   display: flex;
 }
 
-.category-image {
-  width: 90%;
-}
 
 .categoryCard-text {
   text-decoration: none;
@@ -161,7 +153,10 @@ code {
 
 /* ------------------CARD LISTINGS ------------------------------ */
 
+
 .card {
+  width: 90%;
+  padding: 4%;
   margin: 10px;
   border-radius: 10px;
   box-shadow: 0px 6px 18px -19px rgba(0, 0, 0, 0.75);
