--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,9 @@ code {
 .logo {
   height: 7vw;
   padding: 2%;
+  object-fit: contain;
+  height: 100px;
+  margin-left: 20px;
 }
 
 .headerSearch {
@@ -236,3 +239,69 @@ code {
   .image-3 { grid-area: image-3; }
   .image-4 { grid-area: image-4; }
   .image-5 { grid-area: image-5; }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  .card-listings {
+    margin: 10px;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0px 6px 18px -9px rgba(0, 0, 0, 0.75);
+    transition: transform 100ms ease-in;
+    cursor: pointer;
+  }
+  
+  .card-listings:hover {
+    transform: scale(1.07);
+  }
+  
+  .card-listings > img {
+    object-fit: fill;
+    min-width: 300px;
+    min-height: 200px;
+    width: 100%;
+  }
+  
+  .card__info {
+      margin-top: -9px;
+      border-radius: 10px;
+      padding: 20px;
+      padding-top: 20px;
+      border: 1;
+    }
+  
+    .card__info > h2 {
+      font-size: 18px;
+      font-weight: 600;
+    }
+    
+    .card__info > h4 {
+      font-size: 14px;
+      font-weight: 300;
+      margin-top: 8px;
+      margin-bottom: 8px;
+    }
