--- a/src/index.css
+++ b/src/index.css
@@ -261,6 +261,10 @@ a {
 
 /* ------------------CARD LISTINGS ------------------------------ */
 
+.card-deck {
+  margin-top: 40px;
+}
+
 
 .card {
   width: 90%;
@@ -309,7 +313,7 @@ a {
   /* -----------Singular Listing Images ----------------- */
 
   .grid-container {
-    border: 2px solid black;
+    padding: 5% ;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
@@ -325,8 +329,17 @@ a {
   .image-4 { grid-area: image-4; }
   .image-5 { grid-area: image-5; }
 
+  .Image-1 img {
+    height: 800px!important;
+    width: 600px;
+    padding: 0.5%
+  }
 
-
+.image-2 img, .image-3 img, .image-4 img, .image-5 img {
+  height: 400px;
+  width: 400px;
+  padding: 1%;
+}
 
 
 
@@ -352,12 +365,15 @@ a {
 
 
   .card-listings {
+    display: flex!important;
     margin: 10px;
+    /* width: 600px; */
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0px 6px 18px -9px rgba(0, 0, 0, 0.75);
     transition: transform 100ms ease-in;
     cursor: pointer;
+    display: inline-block;
   }
   
   .card-listings:hover {
@@ -366,10 +382,17 @@ a {
   
   .card-listings > img {
     object-fit: fill;
-    min-width: 300px;
+    width: 400px;
+    height: 400px;
+    display: flex;
+    /* min-width: 300px;
     min-height: 200px;
-    width: 100%;
+    width: 100%; */
   }
+
+  /* .card-listing {
+    display: flex;
+  } */
   
   .card__info {
       margin-top: -9px;
@@ -377,6 +400,7 @@ a {
       padding: 20px;
       padding-top: 20px;
       border: 1;
+      
     }
   
     .card__info > h2 {
@@ -389,4 +413,15 @@ a {
       font-weight: 300;
       margin-top: 8px;
       margin-bottom: 8px;
+    }
+
+
+
+
+
+
+    /* ------footer------  */
+
+    .footer {
+      margin-top: 100px;
     }
