--- a/src/index.css
+++ b/src/index.css
@@ -116,7 +116,7 @@ code {
 
 .filler-1 >.filler-card {
   width: 380px;
-  margin: 0 5%;
+  margin: 0 5% 0 7%;
   background: #222222;
   border-radius: 25px;
 
@@ -194,6 +194,7 @@ code {
 .filler-card-avatar {
   background: #222222;
   border-radius: 25px;
+  margin-left: 2%;
 } 
 
 .filler-text-avatar {
@@ -230,7 +231,7 @@ code {
 
 .render-categroyCard {
   align-items: center;
-  width: 90%;
+  width: 97%;
   box-shadow: 0px 6px 18px -9px rgba(0, 0, 0, 0.75);
   border-radius: 20px;
   height: 400px;
@@ -239,10 +240,15 @@ code {
 
 .categoryCard-holder {
   display: flex;
+  padding-top: 2%;
+  padding-bottom: 1%;
+  justify-content: space-between;
+
 }
 
 .category-image {
   width: 100%;
+  height: 300px;
   border-radius: 22px 22px 0 0;
 }
 
@@ -313,7 +319,7 @@ a {
   /* -----------Singular Listing Images ----------------- */
 
   .grid-container {
-    padding: 5% ;
+    padding: 3% 5%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
@@ -343,41 +349,23 @@ a {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   .card-listings {
     display: flex!important;
     margin: 10px;
-    /* width: 600px; */
+    width: 900px;
     border-radius: 10px;
+    margin-left: 10%;
     overflow: hidden;
     box-shadow: 0px 6px 18px -9px rgba(0, 0, 0, 0.75);
     transition: transform 100ms ease-in;
     cursor: pointer;
     display: inline-block;
+    position: relative
+
   }
   
   .card-listings:hover {
-    transform: scale(1.07);
+    transform: scale(1.02);
   }
   
   .card-listings > img {
@@ -385,9 +373,7 @@ a {
     width: 400px;
     height: 400px;
     display: flex;
-    /* min-width: 300px;
-    min-height: 200px;
-    width: 100%; */
+    border-radius: 22px 0 0 0;
   }
 
   /* .card-listing {
@@ -404,20 +390,53 @@ a {
     }
   
     .card__info > h2 {
-      font-size: 18px;
+      padding-top: 5%;
+      font-size: 22px;
       font-weight: 600;
     }
     
     .card__info > h4 {
+      padding-top: 1%;
       font-size: 14px;
       font-weight: 300;
       margin-top: 8px;
       margin-bottom: 8px;
     }
 
+    .card__info > h3 {
+      padding-top: 1%;
+      font-size: 16px;
+      font-weight: 500;
+      margin-top: 8px;
+      margin-bottom: 8px;
+    }
+
+    .card__info > p {
+      bottom: 2px;
+      position: absolute;
+      padding: 0 6%;
+      font-weight: 500;
+      color: #ff385c;
+    }
 
 
+    .listing-cathPhrase {
+      padding-top: 5%;
+      font-size: 26px;
+      font-weight: 500;
+      text-align: center;
+    }
 
+    .listing-title {
+      margin-top: -12px;
+      font-size: 16px;
+      color: #717171;
+      text-decoration: underline;
+    }
+
+     input { 
+       text-align: center
+     }
 
 
     /* ------footer------  */
@@ -425,3 +444,26 @@ a {
     .footer {
       margin-top: 100px;
     }
+
+
+
+
+    /* ----- Utilities  -------  */
+
+.utilities { 
+  margin-top: -350px;
+  padding: 5% 20%;
+  border-bottom: 1px solid #717171;
+  border-top: 1px solid #717171;
+  
+}
+    
+.section {
+  display: flex;
+}
+
+.sub-header {
+  font-weight: 500;
+  font-size: 18px;
+  display: flex
+}
