--- a/src/index.css
+++ b/src/index.css
@@ -319,7 +319,7 @@ a {
   /* -----------Singular Listing Images ----------------- */
 
   .grid-container {
-    padding: 3% 5%;
+    padding: 3% 1%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
@@ -376,9 +376,7 @@ a {
     border-radius: 22px 0 0 0;
   }
 
-  /* .card-listing {
-    display: flex;
-  } */
+  
   
   .card__info {
       margin-top: -9px;
@@ -400,7 +398,7 @@ a {
       font-size: 14px;
       font-weight: 300;
       margin-top: 8px;
-      
+
       margin-bottom: 8px;
     }
 
@@ -439,6 +437,46 @@ a {
        text-align: center
      }
 
+     .listing-description {
+       text-align: left;
+       margin-left: 5%;
+       margin-top: 3%;
+       width: 700px;
+     }
+
+     .listing-details {
+      text-align: left;
+      margin-left: 5%;
+      margin-top: 1%;
+      width: 700px;
+    }
+
+     .space {
+       text-align: left;
+       font-weight: bolder;
+       margin-left: 8%;
+     }
+
+     .space2 {
+      text-align: left;
+      font-weight: bolder;
+      margin-left: 8%;
+      margin-top: 3%;
+    }
+
+    .listing-price {
+      font-weight: bolder;
+      font-size: 15px;
+      float: right; 
+      margin-right: 7%;
+      margin-top: -50px;
+      /* padding-top: 5%;
+      padding-bottom: 5% */
+
+    }
+
+
+
 
     /* ------footer------  */
 
@@ -453,7 +491,7 @@ a {
 
 .utilities { 
   margin-top: -350px;
-  padding: 5% 20%;
+  padding: 10% ;
   border-bottom: 1px solid #717171;
   border-top: 1px solid #717171;
   
@@ -467,4 +505,58 @@ a {
   font-weight: 500;
   font-size: 18px;
   display: flex
+}
+
+
+
+
+/* -------------Reservation form ----------------  */
+
+.reservationForm {
+  padding: 1%;
+  float: right;
+  margin-right: 2%;
+  box-shadow: 0px 6px 18px -9px rgba(0, 0, 0, 0.75);
+  width: 30%;
+  border-radius: 16px;
+  position: relative;
+  top: -750px
+}
+
+
+form {
+  width: 80%;
+  margin: 0 auto;
+  
+}
+
+label,
+input {
+  display: inline-block;
+  border-radius: 16px;
+  padding: 1% 4%;
+
+
+
+}
+
+label {
+  width: 50%;
+  text-align: left;
+}
+
+label+input {
+  width: 80%;
+  margin: 0 30% 2% .5%;
+}
+
+.submit {
+  margin-left:-55px;
+  margin-top: 10px;
+  background: #ff365c;
+  color: white;
+  text-shadow: 1px .5px white;
+  padding: 1% 4%;
+  width: 210px;
+  border-radius: 16px;
 }
