--- a/src/index.css
+++ b/src/index.css
@@ -470,12 +470,42 @@ a {
       float: right; 
       margin-right: 7%;
       margin-top: -50px;
-      /* padding-top: 5%;
-      padding-bottom: 5% */
-
     }
 
 
+    .holder-review-result{ 
+      display: flex;
+      /* justify-content: space-between; */
+
+    }
+
+    .nickname-review {
+      float: left;
+      margin-left: 3%;
+      font-size: 12px;
+      font-weight: bolder;
+    }
+    
+.content-likes { 
+  display: flex;
+  padding: 0 10%;
+  justify-content: space-between; 
+
+}
+
+.content-review {
+  display: flex; 
+  font-size: 15px;
+  font-style: italic;
+  padding-right: 5%;
+}
+
+.likes-review {
+  color: #ff385c;
+  font-weight: 500;
+  float: right;
+  width: 100px;
+}
 
 
     /* ------footer------  */
@@ -513,34 +543,29 @@ a {
 /* -------------Reservation form ----------------  */
 
 .reservationForm {
-  padding: 1%;
+  padding: 2% 0 2% 5%;
   float: right;
   margin-right: 2%;
   box-shadow: 0px 6px 18px -9px rgba(0, 0, 0, 0.75);
-  width: 30%;
+  width: 450px;
   border-radius: 16px;
   position: relative;
   top: -750px
 }
 
 
-form {
-  width: 80%;
+.reservationForm > form {
+  width: 90%;
   margin: 0 auto;
-  
 }
 
-label,
-input {
+.reservationForm > label, input {
   display: inline-block;
   border-radius: 16px;
   padding: 1% 4%;
-
-
-
 }
 
-label {
+.reservationForm > label {
   width: 50%;
   text-align: left;
 }
@@ -559,4 +584,41 @@ label+input {
   padding: 1% 4%;
   width: 210px;
   border-radius: 16px;
+}
+
+.makeReservation {
+  background: #ff365c;
+  color: white;
+  text-shadow: 1px 1px white;
+  padding: 1% 4%;
+  width: 310px;
+  border-radius: 16px;
+  float: right;
+  margin-right: 6%;
+  margin-top: -750px;
+}
+
+.makeReservation > a {
+  color: white!important;
+  font-size: 20px
+}
+
+
+.review-form {
+  padding: 2% 0 2% 5%;
+  float: right;
+  margin-right: -450px;
+  box-shadow: 0px 6px 18px -9px rgba(0, 0, 0, 0.75);
+  width: 450px;
+  border-radius: 16px;
+  position: relative;
+  top: -150px
+}
+
+
+
+/* ----------------- Profile ------------------- */
+
+.about { 
+  padding: 3%;
 }
