--- a/src/index.css
+++ b/src/index.css
@@ -45,14 +45,14 @@ code {
   align-items: center;
   max-width: fit-content;
   padding: 10px;
-  height: 30px;
+  height: 40px;
   border: 1px solid lightgray;
   border-radius: 99px;
 }
 
 .headerSearch > input {
   border: none;
-  width: 20vw;
+  width: 40vw;
   /* padding: 10px; */
   outline-width: 0
 }
@@ -688,4 +688,123 @@ label+input {
 
 .reservationLikesContainer {
   grid-column: 2;
+}
+
+
+/* -----login form  ------ */
+
+
+.loginForm {
+  width: 40%;
+  margin-left: 30%;
+  margin-top: 10%
+}
+
+.loginForm > form {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.loginForm > label, input {
+  display: inline-block;
+  border-radius: 16px;
+  padding: 1% 20%;
+  
+}
+
+.loginForm > input {
+  width: 20%!important
+}
+
+.loginForm > form > label {
+  width: 50%;
+  margin-top: 10px;
+  margin-left: -70px!important
+}
+
+.loginForm > form > h1 { 
+  margin-left: -75px;
+  margin-bottom: 10px;
+
+}
+
+.loginFormsubmit {
+  background: #ff365c;
+  padding:  1.5% 30%;
+  border-radius: 13px;
+  margin-top: 20px;
+  margin-right: 90px;
+  color: white;
+  font-weight: 500
+}
+
+
+/* -----register form  ------ */
+
+
+.registerForm {
+  width: 50%;
+  margin-left: 30%;
+  margin-top: 10%
+}
+
+.registerForm > form {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.registerForm > label, input {
+  display: inline-block;
+  border-radius: 16px;
+  padding: 1% 20%;
+  
+}
+
+.registerForm > input {
+  width: 20%!important
+}
+
+.registerForm > form > label {
+  width: 50%;
+  margin-top: 10px;
+  margin-left: -100px!important
+}
+
+.registerForm > form > h1 { 
+  margin-left: -75px;
+  margin-bottom: 10px;
+
+}
+
+.registerFormSubmit {
+  background: #ff365c;
+  padding:  1.5% 25%;
+  border-radius: 13px;
+  margin-top: 20px;
+  margin-right: 90px;
+  color: white;
+  font-weight: 500
+}
+
+.userHolder > a {
+text-decoration: none;
+}
+
+.userHolder > a > p{
+  color: black;
+  padding: 2% 8px;
+  text-shadow: 1px 1px black;;
+}
+
+.logout {
+  background: #ff365c;
+  color: white;
+  font-weight: bold;
+  border-radius: 20px;
+  padding: 1% 4%;
+  margin-top: 90px;
+}
+
+.nameUser {
+  margin-top: 100px;
 }
